# Game-Mathematics

./: 03.Character movement-3(Distance between the two character in vector).cpp  04. Distance Comparison.cpp  05. Character Movement-4(Vector Scaling).cpp  06.Character movement-5(Unit-Length Vectors).cpp  07.Character movement-6(Adding Vector).cpp  08.DoubleAction Source Code.txt  1.Character movement (using vector and physics).cpp  11.Jumping and Gravity (Time Delta, Game Loop).cpp  12.Smooth Move(ment) (Linear Interpolation).cpp  13.Mouse Control (Euler Angles).cpp  14.Character Movement 7 (Cross Product).cpp  15-16.Bullet Collision (Vector-AABB Intersection).cpp  17. Explosions! (The Remap Function).cpp  19. Billboarding (Basis Vectors).cpp  2.Character movement-2 (between two individual vectors).cpp  20. Character Movement 8 (Matrices).cpp  21. Big Boss Enemy (Matrix Scaling).cpp  22.Rotating Characters (Matrix Rotation).cpp  23.Character Movement 9 (Matrix Translation).cpp  24.Prop Positioning (TRS Matrices).cpp  25-26.Updated Bullet Collisions 1-2 (Coordinate Systems).cpp  27.Bullet Collision Part 3 (Line-Plane Intersection).cpp  28.Adding and Removing Character (Entity List).cpp  29.Frustum Culling.cpp  30.Drawing Transparent Character {Mergesort}.cpp  31.Axis-Angle Rotation.cpp  32.Rotation Quaternions.cpp  33.Quaternion Inverse.cpp  4. Distance Comparison.cpp  6.Character movement-5(Unit-Length Vectors).cpp  8.DoubleAction Source Code.txt  9.-10. Backstabbing (Dot Product).cpp  CMakeLists.txt  README.md
