cmake_minimum_required(VERSION 3.28)
project(Game_Mathematics)

set(CMAKE_CXX_STANDARD 23)

add_executable(Game_Mathematics main.cpp
#        "1.Character movement-1(using vector and physics).cpp"
#        "2.Character movement-2 (between two individual vectors).cpp"
#        "3.Character movement-3(Distance between the two character in vector).cpp"
#        "4. Distance Comparison.cpp"
#        "5. Character Movement-4(Vector Scaling).cpp"
#        "6.Character movement-5(Unit-Length Vectors).cpp"
#        "7.Character movement-6(Adding Vector).cpp"
#        "8.DoubleAction Source Code.txt"
#        "9. - 10 Backstabbing (Dot Product).cpp"
#        "11.Jumping and Gravity (Time Delta, Game Loop).cpp"
#        "12.Smooth Move(ment) (Linear Interpolation).cpp"
)

