cmake_minimum_required(VERSION 3.28)
project(Game_Mathematics)

set(CMAKE_CXX_STANDARD 23)

add_executable(Game_Mathematics main.cpp
#        "01.Character movement-1(using vector and physics).cpp"
#        "02.Character movement-2 (between two individual vectors).cpp"
#        "03.Character movement-3(Distance between the two character in vector).cpp"
#        "04. Distance Comparison.cpp"
#        "05. Character Movement-4(Vector Scaling).cpp"
#        "06.Character movement-5(Unit-Length Vectors).cpp"
#        "07.Character movement-6(Adding Vector).cpp"
#        "08.DoubleAction Source Code.txt"
#        "09. - 10 Backstabbing (Dot Product).cpp"
#        "11.Jumping and Gravity (Time Delta, Game Loop).cpp"
#        "12.Smooth Move(ment) (Linear Interpolation).cpp"
)

