cmake_minimum_required(VERSION 3.28)
project(Game_Mathematics)

set(CMAKE_CXX_STANDARD 23)

add_executable(Game_Mathematics main.cpp
        "29.Frustum Culling.cpp"
        "30.Drawing Transparent Character {Mergesort}.cpp"
        "31.Axis-Angle Rotation.cpp"
        "32.Rotation Quaternions.cpp"
        "33.Quaternion Inverse.cpp"


)

